Ported to 4.0.0-M1